glFusion ChangeLog

v1.1.0
------------
- Moved the Nouveau javascript widget files so they can be used by any theme (Eric)
- Added /custom directories to all the private/plugin/templates/ .thtml files (Eric)
- Implemented the advanced editor for Contact User and Email Story (Mark)
- FileMgmt: Fixed a bug that caused the broken file reporting to not work (Mark)
- Added logview feature to moderation screen (Mark)
- Added jhead / jpegtrans configuration options (Mark)
- Added timezone select list in configuration (Mark)
- Updated Bad Behavior2 to v2.0.23 (Mark)
- Updated look of default poll vote results. (Eric)
- Updated .sql on default install and preliminary .sql prep for mssql support. (Eric)
- Moved and updated Terms of Use and Privacy Policy so they can be theme independent. (Eric)
- Removed orphan images from tarball. (Eric)
- Implemented feature to auto close / edit comments for articles (Mark)
- Microsummaries support for topics fixed. (Mark)
- Fixed hard coded table name in lib-security (Mark).
- Handle HTML properly for config item in configuration (Mark).
- Polls Plugin - Now if multiple questions make button read
  'Start Poll' instead of vote (Mark)
- Implemented PHPMailer into core (Mark)
- Moved PHPMailer to lib/ from Media Gallery (Mark)
- Moved stringparser_bbcode.* to lib/ from Forum plugin (Mark)
- Moved getID3 to lib/ from Media Gallery (Mark)
- New lib-image.php - image processing APIs from Media Gallery (Mark)
- Updated upload.class.php to use new image APIs (Mark)
- FileMgmt Updates (Mark)
   - Replacement upload allows same file to be re-uploaded
   - Filesize is automatically recalulated when new file is uploaded
   - Thumbnail image is not auto-sized (640x480 max)
- Forum Updates (Mark)
   - Improved the upload handling of images
   - Improved permission checking, validate user has proper permissions
     before displaying new / reply links.
- Media Gallery Updates (Mark)
   - Moved image processing APIs to core