@@ -1,0 +1,27 @@
+.st-fmenu ul{
+margin:1em;
+padding:0;
+clear:both;
+text-align:center; /* options are left - center - right */
+color:#999;
+list-style-type:disc;
+list-style-image:none;
+list-style-position:outside;
+}
+.st-fmenu ul li {
+border-right:1px solid #999;
+display:inline;
+padding:0 .8em 0 1em;
+}
+.st-fmenu ul li.st-f-last {
+border-right:0;
+}
+.st-fmenu a:link,
+.st-fmenu a:visited {
+color:#3677c0;
+text-decoration:none;
+}
+.st-fmenu a:hover {
+color:#679ef1;
+text-decoration:underline;
+}
