@@ -1,0 +1,135 @@
+#gl_moomenu-vert-l,
+#gl_moomenu-vert-r {
+	margin:0 auto;
+}
+#gl_moomenu-vert-l {
+	text-align:left;
+}
+#gl_moomenu-vert-r {
+	text-align:right; /* change value to left to have the items left aligned but still in the right menu - you will also want to change the parent images below from 5% to 95% */
+}
+#gl_moomenu-vert-l ul,
+#gl_moomenu-vert-r ul {
+	margin:0;
+	padding:0;
+	list-style:none;
+}
+#gl_moomenu-vert-l ul {
+	width:140px; /* width of left menu items */
+	border-bottom:1px solid #999; /* left menu border color */
+}
+#gl_moomenu-vert-r ul {
+	width:140px; /* width of right menu items */
+	border-bottom:1px solid #999; /* right menu border color */
+}
+#gl_moomenu-vert-l ul li,
+#gl_moomenu-vert-r ul li {
+	position:relative;
+	z-index:40;
+	width:100%;
+}
+#gl_moomenu-vert-l li ul,
+#gl_moomenu-vert-r li ul {
+	position:absolute;
+	top:0;
+	display:block;
+}
+#gl_moomenu-vert-l li ul {
+	left:139px; /*set 1px less than left menu width above */
+}
+#gl_moomenu-vert-r li ul {
+	left:-139px; /*set 1px less than right menu width above */
+}
+#gl_moomenu-vert-l li:hover ul,
+#gl_moomenu-vert-r li:hover ul  {
+	display:block;
+}
+#gl_moomenu-vert-l li:hover>ul,
+#gl_moomenu-vert-r li:hover>ul {
+	visibility:visible;
+}
+#gl_moomenu-vert-l ul ul,
+#gl_moomenu-vert-r ul ul {
+	visibility:hidden;
+}
+/* Fix IE. Hide from IE Mac \*/
+* html #gl_moomenu-vert-l ul li,
+* html #gl_moomenu-vert-r ul li {
+	float:{color-x};
+	height:1%;
+}
+* html #gl_moomenu-vert-l ul li a,
+* html #gl_moomenu-vert-r ul li a {
+	height:1%;
+}
+/* End */
+li,
+#gl_moomenu-vert-l ul,
+#gl_moomenu-vert-r ul {
+	margin:0;
+}
+#gl_moomenu-vert-l ul a,
+#gl_moomenu-vert-r ul a {
+	display:block;
+	text-decoration:none;
+}
+#gl_moomenu-vert-l ul a {
+	color:#0000ff; /* left main menu text color */
+	background:#ddd; /* left main menu bg color */
+	padding:3px 5px; /* translates to height of left main menu boxes */
+	border:1px solid #999; /* left main menu border color (set same as above) */
+	border-bottom:0; /* needs to be specified here to override above - declared in #gl_moomenu-vert-l ul */
+}
+#gl_moomenu-vert-r ul a {
+	color:#0000ff; /* right main menu text color */
+	background:#ddd; /* right main menu bg color */
+	padding:3px 5px; /* translates to height of right main menu boxes */
+	border:1px solid #999; /* right main menu border color (set same as above) */
+	border-bottom:0; /* needs to be specified here to override above - declared in #gl_moomenu-vert-r ul */
+}
+#gl_moomenu-vert-l ul a:hover {
+	color:#fff; /* left main menu text hover color */
+	background:#bbb; /* left main menu hover bg color */
+}
+#gl_moomenu-vert-r ul a:hover {
+	color:#fff; /* right main menu text hover color */
+	background:#bbb; /* right main menu hover bg color */
+}
+#gl_moomenu-vert-l li ul a,
+#gl_moomenu-vert-r li ul a {
+	text-decoration:none;
+}
+#gl_moomenu-vert-l li ul a {
+	color:#0000ff; /* left sub menu text color */
+	background:#ddd; /* left sub menu bg color */
+	padding:3px 5px; /* translates to height of left sub menu boxes */
+	border:1px solid #999; /* left main menu border color (set same as above) */
+	border-bottom:0; /* needs to be specified here to override above - declared in #gl_moomenu-vert-l ul */
+}
+#gl_moomenu-vert-r li ul a {
+	color:#0000ff; /* right sub menu text color */
+	background:#ddd; /* right sub menu bg color */
+	padding:3px 5px; /* translates to height of right sub menu items */
+	border:1px solid #999; /* right main menu border color (set same as above) */
+	border-bottom:0; /* needs to be specified here to override above - declared in #gl_moomenu-vert-r ul */
+}
+#gl_moomenu-vert-l li ul a:hover {
+	color:#fff; /* left sub menu text hover color */
+	background:#bbb; /* left sub menu hover bg color */
+}
+#gl_moomenu-vert-r li ul a:hover {
+	color:#fff; /* right sub menu text hover color */
+	background:#bbb; /* right sub menu hover bg color */
+}
+#gl_moomenu-vert-l ul a.parent-l {
+	background:#ddd url(../../images/menu/vmenu_parent.gif) no-repeat scroll 95% 50%; /* left sub menu background color - change the ul to ul ul to have the image not display on the left main menu */
+}
+#gl_moomenu-vert-l ul a.parent-l:hover {
+	background:#bbb url(../../images/menu/vmenu_parent.gif) no-repeat scroll 95% 50%; /* left sub menu hover background color - change the ul to ul ul to have the image not display on the left main menu */
+}
+#gl_moomenu-vert-r ul a.parent-r {
+	background:#ddd url(../../images/menu/vmenu_parent.gif) no-repeat scroll 5% 50%; /* right sub menu background color - change the ul to ul ul to have the image not display on the right main menu */
+}
+#gl_moomenu-vert-r ul a.parent-r:hover {
+	background:#bbb url(../../images/menu/vmenu_parent.gif) no-repeat scroll 5% 50%; /* right sub menu hover background color - rchange the ul to ul ul to have the image not display on the right main menu */
+}
